tdf#107209 Writer correct vertical text break after fly portions

This change fixes an issue causing Writer to corrupt layout for vertical
text following a fly-out. This bug manifested as overlapping or
incorrectly-reordered lines of text, sometimes appearing many pages
after the initial fly-out.

Change-Id: I05abdbf3ff122398b995220ec4e410434931fdf9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169307
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>
Tested-by: Jenkins
(cherry picked from commit c7f1e41ca672f6bb1055b92012fff0d92a5ff805)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169491
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>